Update datomic transactor config and torquebox settings